fix: remove white gap from header search button

--- a/src/components/layout/Header.scss
+++ b/src/components/layout/Header.scss
@@ -45,6 +45,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 40px;
   }
 
   &__right {
